[FRONT] Fixed z-index values

--- a/PLERC-Website/src/app/sidebar/sidebar.component.scss
+++ b/PLERC-Website/src/app/sidebar/sidebar.component.scss
@@ -6,6 +6,7 @@
   height: calc(100vh - 200px);
   background-color: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  z-index: 8;
 
   .content {
     width: 300px;
